# labour

./: .gitignore  PROJECT_CONTEXT.md
.github/workflows/: job-alert.yml
modules/job-alert/: MODULE_CONTEXT.md  README.md  pyproject.toml
modules/job-alert/data/: sent_posts.sqlite
modules/job-alert/src/job_alert/: __init__.py  __main__.py  cli.py  config.py  keywords.py  models.py  notifier_slack.py  pipeline.py  storage.py
modules/job-alert/src/job_alert/auth/: kakao_session_bootstrap.py
modules/job-alert/src/job_alert/scrapers/: __init__.py  common.py  hojubada.py  melbsky.py  woorimel.py
modules/job-alert/tests/: test_config.py  test_keywords.py  test_pipeline_dedupe.py  test_storage.py
